--- a/Sectors.html
+++ b/Sectors.html
@@ -39,8 +39,8 @@
 	<link rel="stylesheet" href="assets/css/coustom-animation.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/css/scroll-up.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/fonts/stylesheet.css" type="text/css" media="all">
-	<!-- modernizr js -->
-	<script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
+
+
 </head>
 
 <body>
@@ -318,7 +318,7 @@
 				<h2> Our services in the consulting sector </h2>
 				<p class="m-0">Our services in the consulting sector</p>
 			</div>
-			<div class="block__career py-3">
+			<div class="block__career py-3 wow slideInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
 				<div class="row">
 					<div class="col-md-12 col-lg-12">
 						<div class="list_job">
@@ -334,7 +334,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="block__career py-3">
+			<div class="block__career py-3 wow slideInLeft" data-wow-delay="1ms" data-wow-duration="1500ms">
 				<div class="row">
 					<div class="col-md-12 col-lg-12">
 						<div class="list_job">
@@ -350,7 +350,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="block__career py-3">
+			<div class="block__career py-3 wow slideInLeft" data-wow-delay="2ms" data-wow-duration="1500ms">
 				<div class="row">
 					<div class="col-md-12 col-lg-12">
 						<div class="list_job">
@@ -366,7 +366,39 @@
 					</div>
 				</div>
 			</div>
-			<div class="block__career py-3">
+			<div class="block__career py-3 wow slideInLeft" data-wow-delay="3ms" data-wow-duration="1500ms">
+				<div class="row">
+					<div class="col-md-12 col-lg-12">
+						<div class="list_job">
+							<div class="d-flex">
+								<div class="img_tit_sector">
+									<img src="assets/images/main-home/feature_icon01.png" alt="" title="">
+								</div>
+								<h3 class="fs-5">Financial translation</h3>
+							</div>
+							<p>We are looking for a Korean translator to join our creative and professional team. He/she will be responsible for delivering high quality and accurate translations to and from the Korean language</p>
+
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="block__career py-3 wow slideInLeft" data-wow-delay="4ms" data-wow-duration="1500ms">
+				<div class="row">
+					<div class="col-md-12 col-lg-12">
+						<div class="list_job">
+							<div class="d-flex">
+								<div class="img_tit_sector">
+									<img src="assets/images/main-home/feature_icon01.png" alt="" title="">
+								</div>
+								<h3 class="fs-5">Financial translation</h3>
+							</div>
+							<p>We are looking for a Korean translator to join our creative and professional team. He/she will be responsible for delivering high quality and accurate translations to and from the Korean language</p>
+
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="block__career py-3 wow slideInLeft" data-wow-delay="5ms" data-wow-duration="1500ms">
 				<div class="row">
 					<div class="col-md-12 col-lg-12">
 						<div class="list_job">
@@ -395,7 +427,13 @@
 </div>
 
 <section class="feature_area inner_page position-relative">
-	<div class="container"	>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h2 class="fs-3">Arabic Identity with global vision.</h2>
+				<p class="mt-1 mb-3 fs-6">Mutarjimoon is a pioneering language and marketing solutions company enabling effective communication and global reach.</p>
+			</div>
+		</div>
 		<div class="row">
 			<div class="col-lg-4 col-md-6">
 				<!-- feature item -->
