--- a/quote.html
+++ b/quote.html
@@ -39,8 +39,8 @@
 	<link rel="stylesheet" href="assets/css/coustom-animation.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/css/scroll-up.css" type="text/css" media="all">
 	<link rel="stylesheet" href="assets/fonts/stylesheet.css" type="text/css" media="all">
-	<!-- modernizr js -->
-	<script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
+
+
 </head>
 
 <body>
@@ -463,7 +463,10 @@
 		</div>
 		<div class="controls">
 			<a id="wizard-prev" class="btn btn-outline-secondary py-3 px-4 rounded-lg">Previous</a>
-			<div id="wizard-next" class="btn btn-primary text-white float-right py-3 px-5 rounded-lg"><span>Next</span><span> <a href="quoteFinish.html" class="text-white">  Finish </a></span></div>
+			<div id="wizard-next" class="btn bg-main text-white float-right py-3 px-5 rounded-lg">
+				<span>Next</span>
+				<span> <a href="quoteFinish.html" class="text-white">  Finish </a></span>
+			</div>
 		</div>
 	</div>
 </section>
